<resources>

    <string name="version_name">Ver.No 4.120210305</string>

    <string name="default_notification_channel_id" translatable="false">default</string>

    <string name="app_name">TestCraft</string>
    <string name="title_activity_main2">TestcraftDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="subscription_expire_popup_msg">Your Subscription/ Trial has expired. Please Subscribe to continue your path to Academic Excellence.</string>

    <!--    <string name="facebook_app_id">2309546095928391</string>-->
    <!--    <string name="fb_login_protocol_scheme">fb2309546095928391</string>-->
    <!--    <string name="server_client_id">428229802198-29l0t9unctc9skanafuc2jmc9d7juvi4.apps.googleusercontent.com</string>-->

    <string name="facebook_app_id">2838904922808088</string>
    <string name="fb_login_protocol_scheme">fb2838904922808088</string>
    <string name="server_client_id">1019001765891-m5260dl112gco2g1f6j0bsrajmvdq8uo.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="enter_email">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="or">OR</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="google">Continue with Gmail</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="sign_in">
        <font color="#9A9A9A">ALREADY HAVE AN ACCOUNT?</font>
        <font color="#10A8DD">SIGN IN</font>
    </string>
    <string name="sign_up">
        <font color="#9A9A9A">DON\'T HAVE AN ACCOUNT?</font>
        <font color="#10A8DD">SIGN UP</font>
    </string>
    <string name="full_name">First Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="verification_code">Verification Code</string>
    <string name="thank_u">Thank You</string>
    <string name="cpassword">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="continuee">Continue</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="set_password">Set Password</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="test">Test</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="verify">Verify the Code</string>
    <string name="course_type">Course Type</string>
    <string name="home">Home</string>
    <string name="questions">Questions</string>
    <string name="title_activity_tabwise_question">TabwiseQuestionActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="_00_00">00:00:00</string>
    <string name="finish">Finish</string>
    <string name="coin">Add Coin</string>
    <string name="enter_coin">Enter Coin</string>
    <string name="charge">Charge</string>
    <string name="description">Description</string>
    <string name="board">Board</string>
    <string name="standard">Standard</string>
    <string name="subject">Subject</string>
    <string name="buy">Buy</string>
    <string name="mypackages">My Packages</string>
    <string name="mypayments">My Payments</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try Again</string>
    <string name="your_preferences">Your Preferences</string>
    <string name="continue_with_email">Continue with Phone</string>
    <string name="dashboard">Dashboard</string>
    <string name="market_place">Market Place</string>
    <string name="explore">Explore</string>
    <string name="my_profile">My Profile</string>
    <string name="select_competitive_exams">Select Competitive Exams</string>
    <string name="pref_tvSelectExams">Based on your selection, \n do you want to select competitive \n exams?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="filter">Filter</string>
    <string name="other">My Profile</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="resend_code">
        <font color="#9A9A9A">Did not receive the code?</font>
        <font color="#10A8DD">Resend</font>
    </string>
    <string name="email_or_mobile_number">EMAIL or Mobile Number</string>
    <string name="check_mail">Check your email</string>
    <string name="go_to_email">Go to Email</string>
    <string name="cart">Cart</string>
    <string name="change_pass">Change Password</string>
    <string name="not_visited">Not Visited</string>
    <string name="review_later">Review Later</string>
    <string name="un_answered">Un Answered</string>
    <string name="answered">Answered</string>
    <string name="current">Current</string>
    <string name="view_reports">
        <u>View Reports</u>
    </string>

    <string name="back_to_dashboard">
        Back to Dashboard
    </string>
    <string name="skip">Skip</string>
    <string name="analysis">Analysis</string>
    <string name="please_select_the_type_of_exam_you_are_prepairing_for">Please select the type of exam you are
        preparing for
    </string>
    <string name="view_all">View all</string>
    <string name="hint_has_a_problem">Hint has a problem</string>
    <string name="explanation_has_a_problem">Explanation has a problem</string>
    <string name="answer_has_a_problem">Answer has a problem</string>
    <string name="question_has_a_problem">Question has a problem</string>

    <string name="test_summary_report">Test Summary Report</string>
    <string name="address">
        <u>Address</u>
    </string>
    <string name="contact_detail">
        <u>Contact Detail</u>
    </string>
    <string name="applycoupon">Apply Coupon</string>
    <string name="apply">Apply</string>
    <!--    <string name="signup_terms"><![CDATA[I agree to all Terms & Conditions]]></string>-->
    <string name="signup_terms">
        <font color="#9A9A9A">I agree to all</font>
        <font color="#10A8DD"><![CDATA[Terms & Conditions.]]></font>
        <font color="#9A9A9A">An SMS may be sent to authenticate your account, and message and data rates may apply.</font>
    </string>
    <string name="forgotpass_instruction">Please enter your registered mobile number to reset your password.</string>
    <string name="strengths_weekness"><![CDATA[Strengths & Weaknesses]]></string>
    <string name="register_view_solution"><![CDATA[Register & View Solution]]></string>
    <string name="knowledge_gap">Knowledge Gap</string>
    <string name="summary_report">Summary Report</string>
    <string name="subscription">Subscription</string>
    <string name="expired_subscribe_now">
        <font color="#FF0012">Expired - </font>
        <font color="#4DB0AC">Subscribe Now</font>
    </string>

    <array name="array_dot_active">
        <item>@color/colorPrimary</item>
        <item>@color/colorPrimary</item>
        <item>@color/colorPrimary</item>
    </array>

    <array name="array_dot_inactive">
        <item>@color/light_gray</item>
        <item>@color/light_gray</item>
        <item>@color/light_gray</item>
    </array>

    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>

</resources>
