<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingTop="@dimen/_15sdp"
        tools:context=".activity.SelectCompititiveActivity">

    <TextView
            android:text="@string/your_preferences"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:id="@+id/pref_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/competitive_ivBack"
            android:textSize="@dimen/normal_header_size"
            android:gravity="center_vertical"
            android:textColor="@color/black"/>

    <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/back_button"
            android:id="@+id/competitive_ivBack"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pref_header"
            android:padding="@dimen/_9sdp"
            app:layout_constraintBottom_toBottomOf="@+id/pref_header"/>

    <TextView
            android:text="@string/select_competitive_exams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_7sdp"
            android:id="@+id/pref_tvHeader"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:textSize="@dimen/_14sdp"
            android:background="#F7FCFF"
            app:layout_constraintTop_toBottomOf="@+id/pref_header"
            android:paddingLeft="@dimen/_10sdp"
            android:textColor="@color/nfcolor"/>

    <TextView
            android:text="@string/pref_tvSelectExams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_7sdp"
            android:id="@+id/pref_tvSelectExams"
            android:paddingBottom="@dimen/_7sdp"
            android:textSize="@dimen/_14sdp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_50sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:textColor="@color/black"/>

    <Button
            android:id="@+id/pref_btnYes"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:background="@drawable/green_round_bg"
            android:textSize="@dimen/normal_text_size"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/pref_btnNo"
            app:layout_constraintTop_toBottomOf="@+id/pref_tvSelectExams"
            android:layout_marginTop="@dimen/_10sdp"/>

    <Button
            android:id="@+id/pref_btnNo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/no"
            android:textColor="@color/white"
            android:background="@drawable/red_round_bg"
            android:textSize="@dimen/normal_text_size"
            android:textAllCaps="false"
            app:layout_constraintLeft_toRightOf="@+id/pref_btnYes"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pref_tvSelectExams"
            android:layout_marginTop="@dimen/_10sdp"/>

</android.support.constraint.ConstraintLayout>
