<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.IntroActivity">

    <ImageView
            android:id="@+id/intro_ivLogo"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_200sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@mipmap/logo"
            android:contentDescription="@string/logo"/>

    <com.facebook.login.widget.LoginButton
            android:id="@+id/intro_btnFb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginLeft="@dimen/_22sdp"
            android:layout_marginRight="@dimen/_22sdp"
            android:paddingTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:text="@string/facebook"
            app:layout_constraintTop_toBottomOf="@+id/intro_ivLogo"
            android:layout_marginTop="@dimen/_50sdp"/>

    <!--<com.google.android.gms.common.SignInButton-->
    <!--android:id="@+id/login_btnGoogle"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/_35sdp"-->
    <!--android:layout_marginLeft="@dimen/_20sdp"-->
    <!--android:layout_marginRight="@dimen/_20sdp"-->
    <!--android:layout_marginTop="@dimen/_10sdp"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/login_btnFb"/>-->

    <com.google.android.gms.common.SignInButton
            android:id="@+id/intro_btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/intro_btnFb"
            android:layout_marginTop="@dimen/_15sdp"/>

    <Button
            android:id="@+id/intro_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/login_btn_bg"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/intro_btnGoogle"
            android:layout_marginTop="@dimen/_15sdp"/>

    <TextView
            android:id="@+id/intro_tvSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_30sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
