<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activity.LoginActivity">

        <ImageView
                android:id="@+id/login_ivLogo"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@mipmap/logo"
                android:contentDescription="@string/logo"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintTextAppearance="@style/TextAppearence.TextInputLayout.Blue"
                app:layout_constraintTop_toBottomOf="@+id/login_ivLogo"
                android:layout_marginTop="@dimen/_20sdp"
                android:id="@+id/login_llEmail">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/login_etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textSize="@dimen/_14sdp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintTextAppearance="@style/TextAppearence.TextInputLayout.Blue"
                app:layout_constraintTop_toBottomOf="@id/login_llEmail"
                android:layout_marginTop="@dimen/_20sdp"
                android:id="@+id/login_llPassword">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/login_etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textColorHint="@color/colorPrimary"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:imeOptions="actionDone"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
                android:id="@+id/login_tvForgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass"
                android:gravity="right"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:paddingTop="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/login_llPassword"/>

        <Button
                android:id="@+id/login_btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/primary_ring_bg"
                android:textSize="@dimen/_14sdp"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/login_tvForgotPass"
                android:layout_marginTop="@dimen/_10sdp"/>

        <TextView
                android:id="@+id/login_btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintTop_toBottomOf="@+id/login_btnLogin"
                android:layout_marginTop="@dimen/_15sdp"/>

        <!--<Button-->
        <!--android:id="@+id/login_btnSignup"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/_35sdp"-->
        <!--android:text="@string/sign_up"-->
        <!--android:textColor="@color/white"-->
        <!--android:layout_marginLeft="@dimen/_20sdp"-->
        <!--android:layout_marginRight="@dimen/_20sdp"-->
        <!--android:background="@drawable/login_btn_bg"-->
        <!--android:textSize="@dimen/_14sdp"-->
        <!--android:textAllCaps="false"-->
        <!--android:layout_marginTop="@dimen/_20sdp"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/login_or"/>-->

    </android.support.constraint.ConstraintLayout>

</ScrollView>
