<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ForgotPasswordActivity">

    <ImageView
            android:id="@+id/forgot_pass_ivLogo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@mipmap/logo"
            android:contentDescription="@string/logo"/>

    <TextView
            android:id="@+id/forgot_pass_tvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_pass_ivLogo"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/forgot_pass"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"/>

    <TextView
            android:id="@+id/forgot_pass_tvInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please enter registered Email Id to reset password"
            android:textColor="@color/gray"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:textSize="@dimen/_12sdp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/forgot_pass_tvHeading"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence.TextInputLayout.Blue"
            app:layout_constraintTop_toBottomOf="@+id/forgot_pass_tvInstruction"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/forgot_pass_llEmail"
            tools:layout_editor_absoluteX="0dp">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/forgot_pass_etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textSize="@dimen/_14sdp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/forgot_pass_btnSignup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/login_btn_bg"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/forgot_pass_llEmail"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"/>

</android.support.constraint.ConstraintLayout>
