<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/_15sdp"
    tools:context="com.testcraft.testcraft.activity.CheckEmailActivity">

    <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_9sdp"
            app:layout_constraintTop_toTopOf="@+id/checkmail_tvHeading"
            app:srcCompat="@drawable/back_white_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/checkmail_tvHeading"
            android:id="@+id/checkmail_ivBack"/>

    <TextView
            android:id="@+id/checkmail_tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/check_mail"
            android:textColor="@color/white"
            android:paddingTop="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/checkmail_ivBack"
            android:textSize="@dimen/normal_header_size"/>

    <ImageView
            android:id="@+id/checkmail_ivLogo"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_60sdp"
            android:src="@drawable/right_white_bg"
            app:layout_constraintTop_toBottomOf="@+id/checkmail_tvHeading"
            android:contentDescription="@string/logo"/>

    <TextView
            android:id="@+id/checkmail_tvInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="We have sent you a reset password link on your registered email address."
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/regular_text_size"
            android:gravity="center"
            android:paddingLeft="@dimen/_25sdp"
            android:paddingRight="@dimen/_25sdp"
            app:layout_constraintTop_toBottomOf="@+id/checkmail_ivLogo"/>

    <Button
            android:id="@+id/checkmail_btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_email"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/light_blue_round_bg"
            android:textSize="@dimen/regular_text_size"
            android:textAllCaps="false"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintTop_toBottomOf="@+id/checkmail_tvInstruction"
            android:layout_marginBottom="@dimen/_20sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
