<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@android:color/transparent">

    <Button
            android:id="@+id/dialog_setpass_close_btn"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:background="@drawable/close_cancel"
            android:elevation="@dimen/_15sdp"
            android:onClick="closeBtn"
            android:text="X"
            android:translationZ="5dp"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"/>


    <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="@dimen/_10sdp"
            card_view:cardElevation="@dimen/_5sdp"
            card_view:cardUseCompatPadding="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/forgot_title_txt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center"
                    android:text="@string/set_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearence.TextInputLayout.Blue"
                    app:layout_constraintTop_toBottomOf="@id/signup_llEmail"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:id="@+id/dialog_setpass_llPassword">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/dialog_setpass_etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:textSize="@dimen/_14sdp"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:paddingTop="@dimen/_7sdp"
                        android:paddingBottom="@dimen/_7sdp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearence.TextInputLayout.Blue"
                    app:layout_constraintTop_toBottomOf="@id/signup_llPassword"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:id="@+id/dialog_setpass_llCPassword">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/dialog_setpass_etCPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cpassword"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:textSize="@dimen/_14sdp"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:paddingTop="@dimen/_7sdp"
                        android:paddingBottom="@dimen/_7sdp"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/dialog_setpass_btnSignup"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:text="@string/continuee"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/login_btn_bg"
                    android:textSize="@dimen/_14sdp"
                    android:textAllCaps="false"
                    app:layout_constraintTop_toBottomOf="@+id/signup_llMobile"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="@dimen/_20sdp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
